--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   geolocator: ^9.0.2
   flutter_map: ^3.1.0
   web_socket_channel: ^2.4.0
+  uuid: ^3.0.7
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
